RESOLVED FIXED277523
[text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-initial-letter-start-001.html
https://bugs.webkit.org/show_bug.cgi?id=277523
Summary [text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-t...
alan
Reported 2024-08-01 17:42:21 PDT
ssia
Attachments
Patch (14.68 KB, patch)
2024-08-01 17:59 PDT, alan
no flags
[fast-cq]Patch (14.68 KB, patch)
2024-08-02 08:51 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2024-08-01 17:59:14 PDT
alan
Comment 2 2024-08-02 08:51:22 PDT
Created attachment 472047 [details] [fast-cq]Patch
EWS
Comment 3 2024-08-02 10:11:44 PDT
Committed 281759@main (a380cf4fde09): <https://commits.webkit.org/281759@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472047 [details].
Radar WebKit Bug Importer
Comment 4 2024-08-02 10:12:14 PDT
Note You need to log in before you can comment on or make changes to this bug.