Source/WebCore/layout/formattingContexts/inline/InlineLayoutState.h
@@ -58,6 +58,9 @@ public:
     void resetSuccessiveHyphenatedLineCount() { m_successiveHyphenatedLineCount = 0; }
     bool isHyphenationDisabled() const { return m_hyphenationLimitLines && *m_hyphenationLimitLines <= m_successiveHyphenatedLineCount; }
 
+    void setFirstLineStartTrimForInitialLetter(InlineLayoutUnit trimmedThisMuch) { m_firstLineStartTrimForInitialLetter = trimmedThisMuch; }
+    InlineLayoutUnit firstLineStartTrimForInitialLetter() const { return m_firstLineStartTrimForInitialLetter; }
+
     void setInStandardsMode() { m_inStandardsMode = true; }
     bool inStandardsMode() const { return m_inStandardsMode; }
 
@@ -71,6 +74,7 @@ private:
     BlockLayoutState& m_parentBlockLayoutState;
     InlineLayoutUnit m_clearGapBeforeFirstLine { 0.f };
     InlineLayoutUnit m_clearGapAfterLastLine { 0.f };
+    InlineLayoutUnit m_firstLineStartTrimForInitialLetter { 0.f };
     std::optional<size_t> m_clampedLineIndex { };
     std::optional<size_t> m_hyphenationLimitLines { };
     size_t m_successiveHyphenatedLineCount { 0 };
